feat: initial version of QA testing practice

--- a/contato.html
+++ b/contato.html
@@ -43,7 +43,7 @@
       <hr> 
           <br>
           <input type="submit" > 
-          <p>ou <strong>Tel:</strong><a href="http://wa.me/5524993012394" target="_blank"> 24 993012394</a></p><p><a href="/biografia/index.HTML">voltar</a></p>
+          <p>ou <strong>Tel:</strong><a href="http://wa.me/5524993012394" target="_blank"> 24 993012394</a></p><p><a href="index.HTML">voltar</a></p>
      </form>
  </body>
 </html>
